# eso_set_permutations

./: .gitignore  pyproject.toml
eso_set_permutations/: cli.py  config.py  constants.py  exceptions.py  gear_sets.py  log.py  slot.py  solver.py
tests/: test_eso_set_permutations.py
