[tool.poetry]
name = "eso_set_permutations"
version = "0.1.0"
description = ""
authors = ["Giant Panda Bear <sourkwhat@users.noreply.github.com>"]

[tool.poetry.scripts]
eso_sets = "eso_set_permutations.cli:cli_entry"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
colorama = "^0.4.3"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
